_sass/_layout.scss
/******************************************************************************
 * Background animation canvas
 ******************************************************************************/

// Animation canvas floats above all page content; pointer-events: none lets clicks pass through
#bg-canvas {
  position: fixed;
  top: 0;
  left: 50%;
  width: 100%;
  max-width: $max-content-width;
  height: 100%;
  transform: translateX(-50%);
  z-index: 2;
  pointer-events: none;

  canvas {
    display: block;
    width: 100%;
    height: 100%;
  }
}

// Keep content solid and stacked normally; canvas floats above via z-index: 2
header,
.container,
footer {
  position: relative;
  z-index: 1;
  background-color: var(--global-bg-color);
}

/******************************************************************************
 * Content
 ******************************************************************************/

body {
  padding-bottom: 70px;
  color: var(--global-text-color);
  background-color: var(--global-bg-color);

  h1, h2, h3, h4, h5, h6 {
    scroll-margin-top: 66px;
  }
}

body.fixed-top-nav {
  // Add some padding for the nav-bar.
  padding-top: 56px;
}

body.sticky-bottom-footer {
  // Remove padding below footer.
  padding-bottom: 0;
}

.container {
  max-width: $max-content-width;
}

// Profile
.profile {
  img {
    width: 100%;
  }
}

// TODO: redefine content layout.


/******************************************************************************
 * Publications
 ******************************************************************************/

// TODO: redefine publications layout.


/*****************************************************************************
* Projects
*****************************************************************************/

// TODO: redefine projects layout.

